--- a/src/index.css
+++ b/src/index.css
@@ -2,3 +2,12 @@
 @tailwind components;
 @tailwind utilities;
 
+:root {
+    --my-color: red;
+  }
+  
+  .my-element {
+    color: var(--my-color);
+  }
+  
+
