--- a/src/components/Navbar/Navbar.css
+++ b/src/components/Navbar/Navbar.css
@@ -9,7 +9,7 @@ body {
   font-family: montserrat;
 }
 nav {
-  /* background: #0082e6; */
+  /* background: #f1f5a8; */
   height: 80px;
   width: 100%;
 }
@@ -44,7 +44,7 @@ nav ul {
 .hover-underline-animation {
   display: inline-block;
   position: relative;
-  color: #b01c1a;
+  /* color: #b01c1a; */
 }
 
 .hover-underline-animation::after {
@@ -52,10 +52,10 @@ nav ul {
   position: absolute;
   width: 100%;
   transform: scaleX(0);
-  height: 2px;
+  height: 3px;
   bottom: 0;
   left: 0;
-  background-color: #b01c1a;
+  background-color: #F1F5A8;
   transform-origin: bottom right;
   transition: transform 0.25s ease-out;
 }
@@ -115,7 +115,7 @@ nav ul {
 }
 
 .dropdown-content a {
-  color: #b01c1a;
+
   padding: 12px 16px;
   text-decoration: none;
   display: block;
@@ -157,9 +157,6 @@ nav ul {
   }
 }
 
-
 .hover-underline-animation {
   transition: transform 0.3s ease; /* Transition property for smooth animation */
 }
-
-
