--- a/src/components/Navbar/Navbar.css
+++ b/src/components/Navbar/Navbar.css
@@ -27,7 +27,7 @@ nav ul {
 
 #checkbtn {
   font-size: 30px;
-  color: rgb(196, 32, 32);
+  color: rgb(255, 255, 255);
   float: right;
   line-height: 180px;
   /* margin-right: 40px; */
@@ -55,7 +55,7 @@ nav ul {
   height: 3px;
   bottom: 0;
   left: 0;
-  background-color: #F1F5A8;
+  background-color: #f1f5a8;
   transform-origin: bottom right;
   transition: transform 0.25s ease-out;
 }
@@ -115,10 +115,10 @@ nav ul {
 }
 
 .dropdown-content a {
-
   padding: 12px 16px;
   text-decoration: none;
   display: block;
+  color: #000;
 }
 
 .dropdown a:hover {
@@ -139,10 +139,12 @@ nav ul {
     position: fixed;
     width: 100%;
     height: 100vh;
-    background: #9fa8b2;
+    background: #ffffff;
     top: 80px;
     left: -100%;
     z-index: 100;
+    color: #000;
+    
     /* text-align: center; */
     transition: all 0.2s;
   }
@@ -150,6 +152,7 @@ nav ul {
     display: block;
     margin: 50px 0;
     line-height: 30px;
+    color: #000;
   }
 
   #check:checked ~ .NavbarUl {
