--- a/src/components/Landing/Carousel.css
+++ b/src/components/Landing/Carousel.css
@@ -1,9 +1,7 @@
 /* Slideshow */
 
 .slideshow {
-  /* margin: 0 auto; */
   overflow: hidden;
-  /* max-width: 500px; */
 }
 
 .slideshowSlider {
@@ -13,10 +11,10 @@
 
 .slide {
   display: inline-block;
-
-  height: 400px;
+  height: 150px;
   width: 100%;
   border-radius: 10px;
+  /* margin: 30px; */
 }
 
 /* Buttons */
@@ -27,13 +25,11 @@
 
 .slideshowDot {
   display: inline-block;
-  height: 20px;
-  width: 20px;
+  height: 10px;
+  width: 10px;
   border-radius: 50%;
-
   cursor: pointer;
   margin: 15px 7px 0px;
-
   background-color: #c4c4c4;
 }
 
@@ -49,5 +45,3 @@
 .hide-scroll-bar::-webkit-scrollbar {
   display: none; /* Safari and Chrome */
 }
-
-
