--- a/src/components/Landing/Design/design.css
+++ b/src/components/Landing/Design/design.css
@@ -2,14 +2,29 @@
   border: 1px solid white;
   padding: 10px;
 }
+.img2 {
+  border: 1px solid white;
+  padding: 0px 10px 10px 10px;
+}
 
-.HeroBg{
-    background: linear-gradient(to bottom right, #52786f, #040a0cd2);
-    /* For browsers that do not support gradients */
-    background: -webkit-linear-gradient(top left, #4e726a, #040a0cd2);
-    background: -moz-linear-gradient(top left, #4e726a, #040a0cd2);
-    background: -o-linear-gradient(top left, #4e726a, #040a0cd2);
-    background: -ms-linear-gradient(top left, #4e726a, #040a0cd2);
-    /* Add fallback background color */
-    background-color: #2f3e46;
+.HeroBg {
+  background: linear-gradient(to bottom right, #52786f, #040a0cd2);
+  /* For browsers that do not support gradients */
+  background: -webkit-linear-gradient(top left, #4e726a, #040a0cd2);
+  background: -moz-linear-gradient(top left, #4e726a, #040a0cd2);
+  background: -o-linear-gradient(top left, #4e726a, #040a0cd2);
+  background: -ms-linear-gradient(top left, #4e726a, #040a0cd2);
+  /* Add fallback background color */
+  background-color: #2f3e46;
+}
+
+.AboutBg {
+  background: linear-gradient(to bottom right, #4d7169, #040a0cd2);
+  /* For browsers that do not support gradients */
+  background: -webkit-linear-gradient(top right, #4d7169, #040a0cd2);
+  background: -moz-linear-gradient(top right, #4d7169, #040a0cd2);
+  background: -o-linear-gradient(top right, #4d7169, #040a0cd2);
+  background: -ms-linear-gradient(top right, #4d7169, #040a0cd2);
+  /* Add fallback background color */
+  background-color: #040a0cd2;
 }
