--- a/src/components/Landing/Design/design.css
+++ b/src/components/Landing/Design/design.css
@@ -28,3 +28,13 @@
   /* Add fallback background color */
   background-color: #040a0cd2;
 }
+.WWD {
+  background: linear-gradient(to bottom right, #4d7169, #040a0cd2);
+  /* For browsers that do not support gradients */
+  background: -webkit-linear-gradient(top right, #4d7169, #040a0cd2);
+  background: -moz-linear-gradient(top right, #4d7169, #040a0cd2);
+  background: -o-linear-gradient(top right, #4d7169, #040a0cd2);
+  background: -ms-linear-gradient(top right, #4d7169, #040a0cd2);
+  /* Add fallback background color */
+  background-color: #040a0cd2;
+}
