--- a/src/components/Landing/Design/design.css
+++ b/src/components/Landing/Design/design.css
@@ -22,6 +22,7 @@
   background-color: #2f3e46;
 }
 
+
 .AboutBg {
   background: linear-gradient(to bottom right, #4d7169, #040a0cd2);
   /* For browsers that do not support gradients */
@@ -41,4 +42,16 @@
   background: -ms-linear-gradient(top right, #4d7169, #040a0cd2);
   /* Add fallback background color */
   background-color: #040a0cd2;
+}
+
+.ContactBG{
+  background: linear-gradient(to bottom right, #52786f, #040a0cd2);
+  /* For browsers that do not support gradients */
+  background: -webkit-linear-gradient(top left, #4e726a, #040a0cd2);
+  background: -moz-linear-gradient(top left, #4e726a, #040a0cd2);
+  background: -o-linear-gradient(top left, #4e726a, #040a0cd2);
+  background: -ms-linear-gradient(top left, #4e726a, #040a0cd2);
+  /* Add fallback background color */
+  background-color: #2f3e46;
+  /* height:70vh; */
 }
