--- a/src/components/Navbar/Navbar.css
+++ b/src/components/Navbar/Navbar.css
@@ -13,6 +13,18 @@ nav {
   height: 80px;
   width: 100%;
 }
+
+.nav {
+  background: linear-gradient(to bottom right, #52786f, #040a0cd2);
+  /* For browsers that do not support gradients */
+  background: -webkit-linear-gradient(top left, #4e726a, #040a0cd2);
+  background: -moz-linear-gradient(top left, #4e726a, #040a0cd2);
+  background: -o-linear-gradient(top left, #4e726a, #040a0cd2);
+  background: -ms-linear-gradient(top left, #4e726a, #040a0cd2);
+  /* Add fallback background color */
+  background-color: #2f3e46;
+}
+
 label.logo {
   color: white;
   font-size: 35px;
